# HeroesGame_Backend

./: .env  .env_sample  .gitignore  APIs.rest  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
.github/workflows/: docker-image.yml
migrations/2022-05-17-093900_create_users/: down.sql  up.sql
migrations/2022-06-08-015559_create_classes/: down.sql  up.sql
migrations/2022-06-08-015718_create_monsters/: down.sql  up.sql
migrations/2022-06-08-015851_create_items/: down.sql  up.sql
migrations/2022-06-08-020012_create_weapons/: down.sql  up.sql
migrations/2022-06-08-021014_create_heroes/: down.sql  up.sql
migrations/2022-06-08-021130_create_user_items/: down.sql  up.sql
migrations/2022-06-08-021233_create_skills/: down.sql  up.sql
migrations/2022-06-08-021323_create_hero_skills/: down.sql  up.sql
migrations/2022-06-08-021429_create_battle_history/: down.sql  up.sql
migrations/2022-06-08-021515_create_market/: down.sql  up.sql
src/: auth.rs  database.rs  lib.rs  main.rs  models.rs  repositories.rs  routes.rs  schema.rs
src/models/: battle_models.rs  hero_models.rs  item_models.rs  user_models.rs
src/repositories/: battle_repository.rs  hero_repository.rs  item_repository.rs  monster_repository.rs  user_repository.rs
src/routes/: auth_route.rs  battle_route.rs  catch_route.rs  hero_route.rs  item_route.rs
