[package]
name = "heroes_game_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
base64 = "0.13"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.2"
diesel_migrations = "1.4.0"
diesel = { version = "1.4.8", features = ["mysql", "r2d2", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.3"
rand_core = { version = "0.6", features = ["std"] }
rand = { version = "0.8.5", features = ["small_rng"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_mysql_pool"]
